Added the back button in signup

--- a/login/sign_up.html
+++ b/login/sign_up.html
@@ -65,6 +65,11 @@
 						</button>
 					</div>
 
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn">
+							Back
+						</button>
+					</div>
 
 					<div class="text-center p-t-136">
 						<a class="txt2" href="#">
